---
source: crates/engine/query-solver/src/tests/cycle.rs
expression: "digraph {\n    0 [ label = \"root\" ]\n    1 [ label = \"Query.feed\" ]\n    2 [ label = \"Post.author\" ]\n    3 [ label = \"Post.comments\" ]\n    4 [ label = \"Comment.id\" ]\n    5 [ label = \"Author.id\" ]\n    6 [ label = \"Root#C\", shape=parallelogram, color=dodgerblue ]\n    7 [ label = \"feed#C\", shape=box, color=dodgerblue ]\n    8 [ label = \"FedEntity#A\", shape=parallelogram, color=dodgerblue ]\n    9 [ label = \"author#A\", shape=box, color=dodgerblue ]\n    10 [ label = \"id#A\", shape=box, color=dodgerblue ]\n    11 [ label = \"comments#A\", shape=box, color=dodgerblue ]\n    12 [ label = \"id#A\", shape=box, color=dodgerblue ]\n    13 [ label = \"*Comment.authorId\" ]\n    14 [ label = \"FedEntity#C\", shape=parallelogram, color=dodgerblue ]\n    15 [ label = \"authorId#C\", shape=box, color=dodgerblue ]\n    16 [ label = \"*Post.id\" ]\n    17 [ label = \"id#C\", shape=box, color=dodgerblue ]\n    0 -> 1 [ label = \"\" ]\n    1 -> 2 [ label = \"\" ]\n    1 -> 3 [ label = \"\" ]\n    3 -> 4 [ label = \"\" ]\n    2 -> 5 [ label = \"\" ]\n    0 -> 6 [ label = \"\", color=royalblue,fontcolor=royalblue ]\n    0 -> 6 [ label = \"\", style=dashed,arrowhead=none ]\n    6 -> 7 [ label = \"\", color=royalblue,fontcolor=royalblue ]\n    7 -> 1 [ label = \"\", color=violet,arrowhead=none ]\n    7 -> 8 [ label = \"\", color=royalblue,fontcolor=royalblue ]\n    1 -> 8 [ label = \"\", style=dashed,arrowhead=none ]\n    8 -> 9 [ label = \"\", color=royalblue,fontcolor=royalblue ]\n    9 -> 2 [ label = \"\", color=violet,arrowhead=none ]\n    9 -> 10 [ label = \"\", color=royalblue,fontcolor=royalblue ]\n    10 -> 5 [ label = \"\", color=violet,arrowhead=none ]\n    8 -> 11 [ label = \"\", color=royalblue,fontcolor=royalblue ]\n    11 -> 3 [ label = \"\", color=violet,arrowhead=none ]\n    11 -> 12 [ label = \"\", color=royalblue,fontcolor=royalblue ]\n    12 -> 4 [ label = \"\", color=violet,arrowhead=none ]\n    9 -> 3 [ label = \"\", color=orangered,arrowhead=inv ]\n    3 -> 13 [ label = \"\" ]\n    9 -> 13 [ label = \"\", color=orangered,arrowhead=inv ]\n    11 -> 14 [ label = \"\", color=royalblue,fontcolor=royalblue ]\n    3 -> 14 [ label = \"\", style=dashed,arrowhead=none ]\n    14 -> 15 [ label = \"\", color=royalblue,fontcolor=royalblue ]\n    15 -> 13 [ label = \"\", color=violet,arrowhead=none ]\n    14 -> 4 [ label = \"\", color=orangered,arrowhead=inv ]\n    1 -> 16 [ label = \"\" ]\n    8 -> 16 [ label = \"\", color=orangered,arrowhead=inv ]\n    7 -> 17 [ label = \"\", color=royalblue,fontcolor=royalblue ]\n    17 -> 16 [ label = \"\", color=violet,arrowhead=none ]\n}\n"
---
digraph {
    0 [ root]
    1 [ Query.feed]
    2 [ Post.author]
    3 [ Post.comments]
    4 [ Comment.id]
    5 [ Author.id]
    6 [ Root#C]
    7 [ feed#C]
    8 [ FedEntity#A]
    9 [ author#A]
    10 [ id#A]
    11 [ comments#A]
    12 [ id#A]
    13 [ *Comment.authorId]
    14 [ FedEntity#C]
    15 [ authorId#C]
    16 [ *Post.id]
    17 [ id#C]
    0 -> 1 [ label = "Field" ]
    1 -> 2 [ label = "Field" ]
    1 -> 3 [ label = "Field" ]
    3 -> 4 [ label = "Field" ]
    2 -> 5 [ label = "Field" ]
    0 -> 6 [ label = "CreateChildResolver" ]
    0 -> 6 [ label = "HasChildResolver" ]
    6 -> 7 [ label = "CanProvide" ]
    7 -> 1 [ label = "Provides" ]
    7 -> 8 [ label = "CreateChildResolver" ]
    1 -> 8 [ label = "HasChildResolver" ]
    8 -> 9 [ label = "CanProvide" ]
    9 -> 2 [ label = "Provides" ]
    9 -> 10 [ label = "CanProvide" ]
    10 -> 5 [ label = "Provides" ]
    8 -> 11 [ label = "CanProvide" ]
    11 -> 3 [ label = "Provides" ]
    11 -> 12 [ label = "CanProvide" ]
    12 -> 4 [ label = "Provides" ]
    9 -> 3 [ label = "Requires" ]
    3 -> 13 [ label = "Field" ]
    9 -> 13 [ label = "Requires" ]
    11 -> 14 [ label = "CreateChildResolver" ]
    3 -> 14 [ label = "HasChildResolver" ]
    14 -> 15 [ label = "CanProvide" ]
    15 -> 13 [ label = "Provides" ]
    14 -> 4 [ label = "Requires" ]
    1 -> 16 [ label = "Field" ]
    8 -> 16 [ label = "Requires" ]
    7 -> 17 [ label = "CanProvide" ]
    17 -> 16 [ label = "Provides" ]
}
